--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@metamask/providers": "^10.2.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.43.0",
+    "ethers": "^5.7.2",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +21,7 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
+    "wagmi": "^0.9.2",
     "web-vitals": "^2.1.0",
     "wouter": "^2.9.0"
   },
