--- a/frontend-andreas/package.json
+++ b/frontend-andreas/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^2.43.0",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
+    "react-custom-roulette": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
