modified contracts and wrote some tests

--- a/hardhat/.env.example
+++ b/hardhat/.env.example
@@ -2,5 +2,7 @@ METAMASK_PK=
 ALCHEMY_API_KEY=
 
 ETHERSCAN_API_KEY=
-GAS_REPORTER_ENABLED=
 CMC_API_KEY=
+
+GAS_REPORTER_ENABLED=true
+UPDATE_FRONTEND=true
