delete unused files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#571712",
-        "titleBar.activeBackground": "#792119",
-        "titleBar.activeForeground": "#FEFCFC"
-    }
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#571712",
+    "titleBar.activeBackground": "#792119",
+    "titleBar.activeForeground": "#FEFCFC"
+  },
+  "editor.acceptSuggestionOnCommitCharacter": false
 }
