--- a/hardhat/tsconfig.json
+++ b/hardhat/tsconfig.json
@@ -6,6 +6,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true,
-  }
+    "resolveJsonModule": true
+  },
+  "include": ["./src", "./scripts", "./test", "./deploy", "./utils"],
+  "files": ["./hardhat.config.ts"]
 }
